# kernel-synth

./: .env.example  .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt
envs/: .gitignore  README.md  envs.json  requirements-env.txt
envs/lucidrains__audiolm-pytorch__Attend/: README.md  benchmark.py  env.json  harness.py  inputs.py  reference.py  solution.py  triton_kernels.py
envs/lucidrains__audiolm-pytorch__AudioLM/: README.md  benchmark.py  env.json  harness.py  inputs.py  reference.py  solution.py  triton_kernels.py
envs/lucidrains__audiolm-pytorch__CoarseTransformer/: README.md  benchmark.py  env.json  harness.py  inputs.py  reference.py  solution.py  triton_kernels.py
envs/lucidrains__audiolm-pytorch__FineTransformer/: README.md  benchmark.py  env.json  harness.py  inputs.py  reference.py  solution.py  triton_kernels.py
envs/lucidrains__audiolm-pytorch__HubertWithKmeans/: README.md  benchmark.py  env.json  harness.py  inputs.py  reference.py  solution.py  triton_kernels.py
envs/lucidrains__audiolm-pytorch__MultiScaleDiscriminator/: README.md  benchmark.py  env.json  harness.py  reference.py  solution.py  triton_kernels.py
envs/lucidrains__audiolm-pytorch__RelativePositionBias/: README.md  (+7 more)
kernel_synth/: __init__.py  app.py  cloner.py  code_buffer.py  env_builder.py  extractor.py  harness.py  heuristics.py  llm.py  models.py  pipeline.py
milestone/: .gitignore  README.md  milestone.tex
presentation/: README.md  app.js  index.html  styles.css
tests/: test_atif_validate.py  test_llm_helpers.py  test_rewards.py
(+337 files in other folders)
