[project]
name = "kernel-synth"
version = "0.1.0"
description = "Synthesizer for RL environments targeted at custom-kernel engineering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
]

[project.scripts]
kernel-synth = "kernel_synth.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kernel_synth"]

[tool.hatch.build.targets.wheel.force-include]
"kernel_synth/static" = "kernel_synth/static"

[tool.hatch.build.targets.sdist]
include = [
    "kernel_synth/**/*.py",
    "kernel_synth/static/**",
    "README.md",
    "CHANGELOG.md",
    "MANIFEST.in",
    "pyproject.toml",
]
